# Texas

./: .gitignore  Cargo.toml  README.md  grep.txt  release_notes.md
src/: main.rs  rustex.rs  scheme.rs  utils.rs
src/rustex/: aggregate.rs  blocksplit.rs  clean.rs  collect.rs  csvtojson.rs  excol.rs  grep.rs  groupby.rs  head.rs  mod.rs  red.rs  sortcsv.rs  split.rs  sum.rs
src/texas/: aggregate.rs  blocksplit.rs  clean.rs  collect.rs  csv_counter.rs  csv_tree.rs  csvtojson.rs  excol.rs  grep.rs  groupby.rs  head.rs  lastrow.rs  mod.rs  red.rs  shiftjis.rs  sortcsv.rs  split.rs  sum.rs  sum_col.rs  utf8.rs  wc.rs
testfile/: test1.txt  test2.csv  test3-blocksplit.txt  test4-red.txt  test5-ctoj.csv  test6.csv  test7-shift-jis.csv  test8-utf8.csv
testfile/collect_test/: sample3.txt  sample4.txt  sample5.txt
