[package]
name = "texas"
version = "1.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.18"
regex = "1.5.4"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glob = "0.3.1"
anyhow = "1.0"
dirs = "5.0"
